--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="assets/css/bootstrap-4.0.0.css">
   <link rel="stylesheet" href="assets/css/bootstrap-3.3.0.css">
   <link rel="stylesheet" href="assets/css/fontawesome.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <script src="assets/js/jquery-3.2.1.js"></script>
   <script src="assets/js/bootstrap-3.3.0.js"></script>
   <script src="assets/js/bootstrap-4.0.js"></script>
