--- a/Resomar/WebContent/index.html
+++ b/Resomar/WebContent/index.html
@@ -22,7 +22,7 @@
 
 </head>
 <body>
-	<ng-include src="'templates/menu/menu.html'" ></ng-include>
+	<ng-include ng-if="activeTab !== '/login'" src="'templates/menu/menu.html'" ></ng-include>
 
 	<div ng-view></div>
 </body>
