--- a/Resomar/WebContent/index.html
+++ b/Resomar/WebContent/index.html
@@ -14,11 +14,13 @@
 
     <script type="text/javascript" src="assets/js/angular.js"></script>
     <script type="text/javascript" src="assets/js/angular-route.js"></script>
+    <script type="text/javascript" src="assets/js/angular-animation.js"></script>
     <script type="text/javascript" src="assets/js/jquery-3.3.1.js"></script>
     <script type="text/javascript" src="assets/js/fontawesome.min.js"></script>
     <script type="text/javascript" src="assets/js/popper.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="modulos/app.js"></script>
+    <script type="text/javascript" src="modulos/home/home.controller.js"></script>
 
 </head>
 <body>
