--- a/Resomar/WebContent/index.html
+++ b/Resomar/WebContent/index.html
@@ -18,6 +18,9 @@
     <!--//Bibliotecas JS-->
     <script type="text/javascript" src="assets/js/jquery-3.3.1.js"></script>
     <script type="text/javascript" src="assets/js/fontawesome.min.js"></script>
+    <script type="text/javascript" src="assets/js/chart.js"></script>
+    <script type="text/javascript" src="assets/js/grafic.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
 </head>
 <body>
