--- a/Resomar/WebContent/index.html
+++ b/Resomar/WebContent/index.html
@@ -3,24 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <!--Bibliotecas CSS-->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="assets/css/fontawesome.min.css"/>
+    <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css"/>
+    <link rel="stylesheet" href="assets/css/fontawesome/fontawesome.min.css"/>
     <!--Arquivos CSS-->
     <link rel="stylesheet" href="View/home/home.css"/>
     <link rel="stylesheet" href="templates/menu/menu.css"/>
     <!--//Angular-->
-    <script type="text/javascript" src="assets/js/angular.js"></script>
-    <script type="text/javascript" src="assets/js/angular-route.js"></script>
-    <script type="text/javascript" src="assets/js/angular-animation.js"></script>
-    <script type="text/javascript" src="modulos/app.js"></script>
-    <script type="text/javascript" src="modulos/home/home.controller.js"></script>
+    <script type="text/javascript" src="assets/js/angular/angular.js"></script>
+    <script type="text/javascript" src="assets/js/angular/angular-route.js"></script>
+    <script type="text/javascript" src="assets/js/angular/angular-animation.js"></script>
+    <script type="text/javascript" src="modules/app.js"></script>
+    <script type="text/javascript" src="modules/home/home.controller.js"></script>
+    <script type="text/javascript" src="modules/login/login.controller.js"></script>
+
     <!--//Bibliotecas JS-->
-    <script type="text/javascript" src="assets/js/jquery-3.3.1.js"></script>
-    <script type="text/javascript" src="assets/js/fontawesome.min.js"></script>
-    <script type="text/javascript" src="assets/js/chart.js"></script>
-    <script type="text/javascript" src="assets/js/grafic.js"></script>
+    <script type="text/javascript" src="assets/js/jquery/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="assets/js/fontawesome/fontawesome.min.js"></script>
+    <script type="text/javascript" src="assets/js/grafic/chart.js"></script>
+    <script type="text/javascript" src="assets/js/grafic/grafic.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/js/bootstrap/bootstrap.min.js"></script>
 </head>
 <body>
 <ng-include ng-if="activeTab !== '/login'" src="'templates/menu/menu.html'"></ng-include>
