--- a/Resomar/WebContent/index.html
+++ b/Resomar/WebContent/index.html
@@ -8,6 +8,8 @@
     <!--Arquivos CSS-->
     <link rel="stylesheet" href="View/home/home.css"/>
     <link rel="stylesheet" href="templates/menu/menu.css"/>
+    <link rel="stylesheet" href="View/clinic/clinic.css"/>
+
     <!--//Angular-->
     <script type="text/javascript" src="assets/js/angular/angular.js"></script>
     <script type="text/javascript" src="assets/js/angular/angular-route.js"></script>
