--- a/Resomar/WebContent/index.html
+++ b/Resomar/WebContent/index.html
@@ -5,6 +5,7 @@
     <!--Bibliotecas CSS-->
     <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css"/>
     <link rel="stylesheet" href="assets/css/fontawesome/fontawesome.min.css"/>
+    <link rel="stylesheet" href="assets/css/animate/animate.css"/>
 
     <!--Arquivos CSS-->
     <link rel="stylesheet" href="templates/menu/menu.css"/>
