--- a/Resomar/WebContent/index.html
+++ b/Resomar/WebContent/index.html
@@ -31,7 +31,7 @@
 
 </head>
 <body>
-<ng-include ng-if="activeTab !== '/login' && activeTab !== '/user'" src="'templates/menu/menu.html'"></ng-include>
+<ng-include ng-if="activeTab !== '/entrar' && activeTab !== '/usuario'" src="'templates/menu/menu.html'"></ng-include>
 <div ng-view></div>
 </body>
 </html>
