modal editar especialidade

--- a/Resomar/WebContent/index.html
+++ b/Resomar/WebContent/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="assets/js/angular/angular.js"></script>
     <script type="text/javascript" src="assets/js/angular/angular-route.js"></script>
     <script type="text/javascript" src="assets/js/angular/angular-animation.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-sanitize.js"></script>
     <script type="text/javascript" src="assets/js/fontawesome/fontawesome.min.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap/ui-bootstrap.min.js"></script>
