cadastro de especialistas

--- a/Resomar/WebContent/index.html
+++ b/Resomar/WebContent/index.html
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="modules/home/home.controller.js"></script>
     <script type="text/javascript" src="modules/login/login.controller.js"></script>
     <script type="text/javascript" src="modules/speciality/speciality.controller.js"></script>
+    <script type="text/javascript" src="modules/specialist/specialist.controller.js"></script>
 
 </head>
 <body>
