--- a/Resomar/WebContent/index.html
+++ b/Resomar/WebContent/index.html
@@ -26,6 +26,7 @@
 
     <!--//Angular-->
     <script type="text/javascript" src="modules/app.js"></script>
+    <script type="text/javascript" src="modules/menu/menu.controller.js"></script>
     <script type="text/javascript" src="modules/home/home.controller.js"></script>
     <script type="text/javascript" src="modules/login/login.controller.js"></script>
     <script type="text/javascript" src="modules/speciality/speciality.controller.js"></script>
