--- a/Resomar/WebContent/index.html
+++ b/Resomar/WebContent/index.html
@@ -19,10 +19,8 @@
     <script type="text/javascript" src="assets/js/angular/angular-animation.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-sanitize.js"></script>
     <script type="text/javascript" src="assets/js/fontawesome/fontawesome.min.js"></script>
-    <script type="text/javascript" src="assets/js/bootstrap/bootstrap.min.js"></script>
+    <script type="text/javsascript" src="assets/js/bootstrap/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/js/bootstrap/ui-bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/js/grafic/chart.js"></script>
-    <script type="text/javascript" src="assets/js/grafic/grafic.js"></script>
 
     <!--//Angular-->
     <script type="text/javascript" src="modules/app.js"></script>
