--- a/Resomar/WebContent/index.html
+++ b/Resomar/WebContent/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="assets/css/fontawesome/fontawesome.min.css"/>
     <link rel="stylesheet" href="assets/css/animate/animate.css"/>
 
+    <!--CSS Global-->
+    <link rel="stylesheet" href="index.css"/>
     <!--Arquivos CSS-->
     <link rel="stylesheet" href="templates/menu/menu.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -30,6 +32,7 @@
     <script type="text/javascript" src="modules/user/user.controller.js"></script>
     <script type="text/javascript" src="modules/speciality/speciality.controller.js"></script>
     <script type="text/javascript" src="modules/specialist/specialist.controller.js"></script>
+    <script type="text/javascript" src="modules/ong/ong.controller.js"></script>
 
 </head>
 <body>
