--- a/Resomar/WebContent/index.html
+++ b/Resomar/WebContent/index.html
@@ -30,8 +30,10 @@
     <script type="text/javascript" src="modules/home/home.controller.js"></script>
     <script type="text/javascript" src="modules/login/login.controller.js"></script>
     <script type="text/javascript" src="modules/user/user.controller.js"></script>
+    <script type="text/javascript" src="modules/patient/patient.controller.js"></script>
     <script type="text/javascript" src="modules/speciality/speciality.controller.js"></script>
     <script type="text/javascript" src="modules/specialist/specialist.controller.js"></script>
+    <script type="text/javascript" src="modules/needs/needs.controller.js"></script>
     <script type="text/javascript" src="modules/ong/ong.controller.js"></script>
 
 </head>
