--- a/Resomar/WebContent/index.html
+++ b/Resomar/WebContent/index.html
@@ -34,6 +34,8 @@
     <script type="text/javascript" src="modules/speciality/speciality.controller.js"></script>
     <script type="text/javascript" src="modules/specialist/specialist.controller.js"></script>
     <script type="text/javascript" src="modules/needs/needs.controller.js"></script>
+    <script type="text/javascript" src="modules/donate/donate.controller.js"></script>
+    <script type="text/javascript" src="modules/clinic/clinic.controller.js"></script>
     <script type="text/javascript" src="modules/ong/ong.controller.js"></script>
 
 </head>
